--- a/src/components/PlayListItemCard.astro
+++ b/src/components/PlayListItemCard.astro
@@ -7,26 +7,33 @@ interface Props {
 }
 
 const { playlist } = Astro.props;
-const { id, title, cover, color, artists } = playlist;
+const { id, title, cover, artists } = playlist;
 const artistsString = artists.join(", ");
 ---
 
-<article class="group relative">
+<article
+  class="group relative bg-zinc-800 hover:bg-zinc-700 shadow-lg hover:shadow-xl rounded-xl"
+>
   <div
     class="absolute right-4 bottom-14 translate-y-4 transition-all duration-500 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 z-10"
   >
-    <CardPlayButton id={id} />
+    <CardPlayButton client:visible id={id} size="sm" />
   </div>
 
   <a
     href={`/playlist/${id}`}
-    class="playlist-item transition-all duration-300 overflow-hidden flex relative gap-2 p-2 rounded-lg bg-zinc-800 hover:bg-zinc-700 shadow-lg hover:shadow-xl w-44 flex-col"
+    class="playlist-item transition-all duration-300 overflow-hidden flex relative gap-2 p-2 rounded-lg w-44 flex-col"
     transition:name=`playlist ${id} container`
   >
-    <picture class="aspect-square w-full h-auto rounded-lg flex-none">
-      <img src={cover} alt={title} transition:name=`platlist ${id} image` />
+    <picture class="aspect-square w-full h-auto flex-none">
+      <img
+        src={cover}
+        alt={title}
+        transition:name=`platlist ${id} image`
+        class="rounded-lg"
+      />
     </picture>
-    <div class="flex flex-col justify-center truncate">
+    <div class="flex flex-col justify-center truncate px-2">
       <h3 class="font-semibold text-sm" transition:name=`playlist ${id} title`>
         {title}
       </h3>
