--- a/src/components/SideMenuCard.astro
+++ b/src/components/SideMenuCard.astro
@@ -1,24 +1,31 @@
 ---
 import { type Playlist } from "@/lib/data";
+import { CardPlayButton } from "./CardPlayButton";
 
 interface Props {
   playlist: Playlist;
 }
 
 const { playlist } = Astro.props;
-const { id, title, cover, color, artists } = playlist;
+const { id, title, cover, artists } = playlist;
 const artistsString = artists.join(", ");
 ---
 
 <a
   href={`/playlist/${id}`}
-  class="playlist-item flex gap-2 p-2 rounded-lg hover:bg-zinc-700"
+  class="playlist-item flex justify-between items-center p-2 ml-2 rounded-lg hover:bg-zinc-700"
 >
-  <picture class="w-12 h-12 rounded-lg">
-    <img src={cover} alt={title} />
-  </picture>
-  <div class="flex flex-col justify-center truncate">
-    <h3 class="font-semibold text-sm">{title}</h3>
-    <p class="text-xs opacity-50">{artistsString}</p>
+  <div class="flex gap-2">
+    <picture class="w-12 h-12 rounded-lg">
+      <img src={cover} alt={title} class="rounded-lg" />
+    </picture>
+    <div class="flex flex-col justify-center truncate">
+      <h3 class="font-semibold text-sm">{title}</h3>
+      <span class="text-xs opacity-50">{artistsString}</span>
+    </div>
+  </div>
+
+  <div>
+    <CardPlayButton client:load id={id} size="sm" element="side" />
   </div>
 </a>
